--- a/index.html
+++ b/index.html
@@ -1,135 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <script src="./js/scripts.js"></script>
     <title>Ransom joke note</title>
   </head>
+
   <body>
     <div class="container">
       <div class="word">
-        <span class="whyWLetter">w</span>
-        <span class="whyHLetter">h</span>
-        <span class="whyYLetter">y</span>
+        <span class="whyWLetter why w">w</span>
+        <span class="whyHLetter why h">h</span>
+        <span class="whyYLetter why y">y</span>
       </div>
       <div class="word">
-        <span class="didDLetter">d</span>
-        <span class="didILetter">i</span>
-        <span class="didDTwoLetter">d</span>
+        <span class="didDLetter did d">d</span>
+        <span class="didILetter did i">i</span>
+        <span class="didDTwoLetter did d">d</span>
       </div>
       <div class="word">
-        <span class="theTLetter">t</span>
-        <span class="theHLetter">h</span>
-        <span class="theELetter">e</span>
+        <span class="theTLetter the t">t</span>
+        <span class="theHLetter the h">h</span>
+        <span class="theELetter the e">e</span>
       </div>
       <div class="word">
-        <span class="frontendFLetter">f</span>
-        <span class="frontendRLetter">r</span>
-        <span class="frontendOLetter">o</span>
-        <span class="frontendNLetter">n</span>
-        <span class="frontendTLetter">t</span>
+        <span class="frontendFLetter frontend f">f</span>
+        <span class="frontendRLetter frontend r">r</span>
+        <span class="frontendOLetter frontend o">o</span>
+        <span class="frontendNLetter frontend n">n</span>
+        <span class="frontendTLetter frontend t">t</span>
         <span class="hyphen">-</span>
-        <span class="frontendELetter">e</span>
-        <span class="frontendNTwoLetter">n</span>
-        <span class="frontendDLetter">d</span>
+        <span class="frontendELetter frontend e">e</span>
+        <span class="frontendNTwoLetter frontend n">n</span>
+        <span class="frontendDLetter frontend d">d</span>
       </div>
       <div class="word">
-        <span class="developerDLetter">d</span>
-        <span class="developerELetter">e</span>
-        <span class="developerVLetter">v</span>
-        <span class="developerETwoLetter">e</span>
-        <span class="developerLLetter">l</span>
-        <span class="developerOLetter">o</span>
-        <span class="developerPLetter">p</span>
-        <span class="developerEThreeLetter">e</span>
-        <span class="developerRLetter">r</span>
+        <span class="developerDLetter developer d">d</span>
+        <span class="developerELetter developer e">e</span>
+        <span class="developerVLetter developer v">v</span>
+        <span class="developerETwoLetter developer e">e</span>
+        <span class="developerLLetter developer l">l</span>
+        <span class="developerOLetter developer o">o</span>
+        <span class="developerPLetter developer p">p</span>
+        <span class="developerEThreeLetter developer e">e</span>
+        <span class="developerRLetter developer r">r</span>
       </div>
       <div class="word">
-        <span class="takeTLetter">t</span>
-        <span class="takeALetter">a</span>
-        <span class="takeKLetter">k</span>
-        <span class="takeELetter">e</span>
+        <span class="takeTLetter take t">t</span>
+        <span class="takeALetter take a">a</span>
+        <span class="takeKLetter take k">k</span>
+        <span class="takeELetter take e">e</span>
       </div>
       <div class="word">
-        <span class="upULetter">u</span>
-        <span class="upPLetter">p</span>
+        <span class="upULetter up u">u</span>
+        <span class="upPLetter up p">p</span>
       </div>
       <div class="word">
-        <span class="gardeningGLetter">g</span>
-        <span class="gardeningALetter">a</span>
-        <span class="gardeningRLetter">r</span>
-        <span class="gardeningDLetter">d</span>
-        <span class="gardeningELetter">e</span>
-        <span class="gardeningNLetter">n</span>
-        <span class="gardeningILetter">i</span>
-        <span class="gardeningNTwoLetter">n</span>
-        <span class="gardeningGTwoLetter">g</span>
+        <span class="gardeningGLetter gardening g">g</span>
+        <span class="gardeningALetter gardening a">a</span>
+        <span class="gardeningRLetter gardening r">r</span>
+        <span class="gardeningDLetter gardening d">d</span>
+        <span class="gardeningELetter gardening e">e</span>
+        <span class="gardeningNLetter gardening n">n</span>
+        <span class="gardeningILetter gardening i">i</span>
+        <span class="gardeningNTwoLetter gardening n">n</span>
+        <span class="gardeningGTwoLetter gardening g">g</span>
       </div>
       <div class="word">
         <span class="question-mark">?</span>
       </div>
       <div class="word">
-        <span class="becauseBLetter">b</span>
-        <span class="becauseELetter">e</span>
-        <span class="becauseCLetter">c</span>
-        <span class="becauseALetter">a</span>
-        <span class="becauseULetter">u</span>
-        <span class="becauseSLetter">s</span>
-        <span class="becauseETwoLetter">e</span>
+        <span class="becauseBLetter because b">b</span>
+        <span class="becauseELetter because e">e</span>
+        <span class="becauseCLetter because c">c</span>
+        <span class="becauseALetter because a">a</span>
+        <span class="becauseULetter because u">u</span>
+        <span class="becauseSLetter because s">s</span>
+        <span class="becauseETwoLetter because e">e</span>
       </div>
       <div class="word">
-        <span class="theyTLetter">t</span>
-        <span class="theyHLetter">h</span>
-        <span class="theyELetter">e</span>
-        <span class="theyYLetter">y</span>
+        <span class="theyTLetter they t">t</span>
+        <span class="theyHLetter they h">h</span>
+        <span class="theyELetter they e">e</span>
+        <span class="theyYLetter they y">y</span>
       </div>
       <div class="word">
-        <span class="wantedWLetter">w</span>
-        <span class="wantedALetter">a</span>
-        <span class="wantedNLetter">n</span>
-        <span class="wantedTLetter">t</span>
-        <span class="wantedELetter">e</span>
-        <span class="wantedDLetter">d</span>
+        <span class="wantedWLetter wanted w">w</span>
+        <span class="wantedALetter wanted a">a</span>
+        <span class="wantedNLetter wanted n">n</span>
+        <span class="wantedTLetter wanted t">t</span>
+        <span class="wantedELetter wanted e">e</span>
+        <span class="wantedDLetter wanted d">d</span>
       </div>
       <div class="word">
-        <span class="toTLetter">t</span>
-        <span class="toOLetter">o</span>
+        <span class="toTLetter to t">t</span>
+        <span class="toOLetter to o">o</span>
       </div>
       <div class="word">
-        <span class="improveILetter">i</span>
-        <span class="improveMLetter">m</span>
-        <span class="improvePLetter">p</span>
-        <span class="improveRLetter">r</span>
-        <span class="improveOLetter">o</span>
-        <span class="improveVLetter">v</span>
-        <span class="improveELetter">e</span>
+        <span class="improveILetter improve i">i</span>
+        <span class="improveMLetter improve m">m</span>
+        <span class="improvePLetter imporve p">p</span>
+        <span class="improveRLetter improve r">r</span>
+        <span class="improveOLetter improve o">o</span>
+        <span class="improveVLetter improve v">v</span>
+        <span class="improveELetter improve e">e</span>
       </div>
       <div class="word">
-        <span class="theirTLetter">t</span>
-        <span class="theirHLetter">h</span>
-        <span class="theirELetter">e</span>
-        <span class="theirILetter">i</span>
-        <span class="theirRLetter">r</span>
+        <span class="theirTLetter their t">t</span>
+        <span class="theirHLetter their h">h</span>
+        <span class="theirELetter their e">e</span>
+        <span class="theirILetter their i">i</span>
+        <span class="theirRLetter their r">r</span>
       </div>
       <div class="word">
-        <span class="rootRLetter">r</span>
-        <span class="rootOLetter">o</span>
-        <span class="rootOTwoLetter">o</span>
-        <span class="rootTLetter">t</span>
+        <span class="rootRLetter root r">r</span>
+        <span class="rootOLetter root o">o</span>
+        <span class="rootOTwoLetter root o">o</span>
+        <span class="rootTLetter root t">t</span>
       </div>
       <div class="word">
-        <span class="skillsSLetter">s</span>
-        <span class="skillsKLetter">k</span>
-        <span class="skillsILetter">i</span>
-        <span class="skillsLLetter">l</span>
-        <span class="skillsLTwoLetter">l</span>
-        <span class="skillsSTwoLetter">s</span>
+        <span class="skillsSLetter skills s">s</span>
+        <span class="skillsKLetter skills k">k</span>
+        <span class="skillsILetter skills i">i</span>
+        <span class="skillsLLetter skills l">l</span>
+        <span class="skillsLTwoLetter skills l">l</span>
+        <span class="skillsSTwoLetter skills s">s</span>
       </div>
       <div class="word">
         <span class="exclamation-mark">!</span>
       </div>
     </div>
   </body>
+
 </html>
